[project]
name = "mpsc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "hl7>=0.4.5",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "optuna>=4.4.0",
    "pandas>=2.3.0",
    "pip>=25.1.1",
    "scikit-learn>=1.7.0",
    "scipy>=1.16.0",
    "statsmodels>=0.14.5",
    "tqdm>=4.67.1",
    "types-tqdm>=4.67.0.20250516",
    "xgboost>=3.0.2",
]